# askai

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  plan.md  pyproject.toml  response-example.html
.github/workflows/: deploy.yml
config/: init.sql  migration_001_add_view_count_and_related_questions.sql
config/migrations/: 002_migrate_to_many_to_many.sql  003_create_fatvo_tables.sql  004_add_embeddings.sql  005_add_session_chat_tables.sql
docs/: analysis.md  testing-results.md
src/app/: __init__.py  __main__.py
src/app/api/: __init__.py  chat.py  main.py  search.py
src/app/database/: db.py
src/app/fatvo/: __init__.py  __main__.py  scraper.py
src/app/rag/: __init__.py  embeddings.py  gemini.py  retriever.py
src/app/scraper/: __init__.py  parser.py  scraper.py
src/app/utils/: __init__.py  transliterate.py
web/: Dockerfile  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css
web/src/components/: ChatInput.tsx  ChatMessage.tsx  QuestionCard.tsx  SearchBar.tsx
web/src/hooks/: useSession.ts  useTheme.ts
web/src/pages/: Chat.tsx  Home.tsx  Question.tsx  Search.tsx
