[project]
name = "askai"
version = "0.1.0"
description = "DinAI - RAG AI Chatbot with Web Scraper"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "psycopg[binary]>=3.2.13",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "google-genai>=1.0.0",
    "pgvector>=0.3.0",
    "ruff>=0.8.0",
]
